--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mayank Musaddi",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^2.3.4",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
