--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "author": "Mayank Musaddi",
   "license": "ISC",
   "dependencies": {
-    "csv-parser": "^2.3.4",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
-  "bundledDependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.4"
-  }
+  "bundledDependencies": [
+    "express",
+    "nodemon"
+  ]
 }
