--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Mayank Musaddi",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.0.4",
+    "csv-parser": "^3.0.0",
     "express": "^4.17.1",
+    "node-csv": "^0.1.2",
     "nodemon": "^2.0.4"
   },
   "bundledDependencies": [
